--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ fabricApi {
     }
 }
 
+publishToMavenLocal
+
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
