Update 1.21.5, IDK IF THIS WORKS

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '1.9-SNAPSHOT'
+    id 'fabric-loom' version '1.10-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -19,10 +19,23 @@ repositories {
 }
 
 fabricApi {
-    configureDataGeneration() {
+    configureDataGeneration(){
         client = true
     }
 }
+
+loom {
+    splitEnvironmentSourceSets()
+
+    mods {
+        "galacticlib" {
+            sourceSet sourceSets.main
+            sourceSet sourceSets.client
+        }
+    }
+
+}
+
 
 publishToMavenLocal
 
