--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.8
-loader_version=0.16.10
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.13
+
+# Fabric API
+fabric_version=0.119.9+1.21.5
 # Mod Properties
-mod_version=1.0
+mod_version=1.2.0
 maven_group=rings_of_saturn.github.io
 archives_base_name=GalacticLib
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.115.1+1.21.4
