--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.13
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
+loom_version=1.11-SNAPSHOT
 
 # Fabric API
-fabric_version=0.119.9+1.21.5
+fabric_version=0.130.0+1.21.8
 # Mod Properties
 mod_version=1.2.0
 maven_group=rings_of_saturn.github.io
